--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dsf-website",
+  "name": "dsf-admin-sanity",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -21,7 +21,6 @@
     "@sanity/uuid": "^3.0.2",
     "@sanity/vision": "^3.63.0",
     "axios": "^1.7.7",
-    "he": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.63.0",
